repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__badge_versions_matrix__exclude_sources.snap
---
source: repology-webapp/tests/snapshot_tests/badge_versions_matrix.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 200
Header: content-type: image/svg+xml
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors *; base-uri 'none'; form-action 'self'
Header: referrer-policy: unsafe-url
Header: cache-control: max-age=3600
Header: content-length: 3302
---
<svg xmlns="http://www.w3.org/2000/svg" width="187" height="80"><clipPath id="clip"><rect rx="3" width="100%" height="100%" fill="#000"/></clipPath><linearGradient id="grad" x2="0" y2="100%"><stop offset="0" stop-color="#bbb" stop-opacity=".1"/><stop offset="1" stop-opacity=".1"/></linearGradient><g clip-path="url(#clip)"><rect width="100%" height="100%" fill="#555"/><rect y="0" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="97" y="11" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">zsh</text><text x="97" y="10" text-anchor="middle" dominant-baseline="central">zsh</text><text x="157" y="11" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">fish</text><text x="157" y="10" text-anchor="middle" dominant-baseline="central">fish</text></g><rect x="67" y="20" width="60" height="20" fill="#4c1"/><rect x="127" y="20" width="60" height="20" fill="#e05d44"/><rect y="20" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="62" y="31" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">FreeBSD</text><text x="62" y="30" text-anchor="end" dominant-baseline="central">FreeBSD</text><text x="97" y="31" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">1.1</text><text x="97" y="30" text-anchor="middle" dominant-baseline="central">1.1</text><text x="157" y="31" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">1.0</text><text x="157" y="30" text-anchor="middle" dominant-baseline="central">1.0</text></g><rect x="67" y="40" width="60" height="20" fill="#e05d44"/><rect y="40" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="62" y="51" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">Ubuntu 12</text><text x="62" y="50" text-anchor="end" dominant-baseline="central">Ubuntu 12</text><text x="97" y="51" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">0.9</text><text x="97" y="50" text-anchor="middle" dominant-baseline="central">0.9</text><text x="157" y="51" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">-</text><text x="157" y="50" text-anchor="middle" dominant-baseline="central">-</text></g><rect x="67" y="60" width="60" height="20" fill="#e05d44"/><rect y="60" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="62" y="71" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">Ubuntu 24</text><text x="62" y="70" text-anchor="end" dominant-baseline="central">Ubuntu 24</text><text x="97" y="71" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">1.0</text><text x="97" y="70" text-anchor="middle" dominant-baseline="central">1.0</text><text x="157" y="71" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">-</text><text x="157" y="70" text-anchor="middle" dominant-baseline="central">-</text></g></g></svg>
