repology-webapp/tests/snapshot_tests/snapshots/snapshot__snapshot_tests__badge_versions_matrix__header.snap
---
source: repology-webapp/tests/snapshot_tests/badge_versions_matrix.rs
expression: response.as_text_snapshot().unwrap()
---
Status: 200
Header: content-type: image/svg+xml
Header: x-content-type-options: nosniff
Header: content-security-policy: default-src 'none'; style-src 'self'; script-src 'self'; img-src 'self'; font-src 'self'; frame-ancestors *; base-uri 'none'; form-action 'self'
Header: referrer-policy: unsafe-url
Header: cache-control: max-age=3600
Header: content-length: 4408
---
<svg xmlns="http://www.w3.org/2000/svg" width="210" height="125"><clipPath id="clip"><rect rx="3" width="100%" height="100%" fill="#000"/></clipPath><linearGradient id="grad" x2="0" y2="100%"><stop offset="0" stop-color="#bbb" stop-opacity=".1"/><stop offset="1" stop-opacity=".1"/></linearGradient><g clip-path="url(#clip)"><rect width="100%" height="100%" fill="#555"/><g fill="#fff" text-anchor="middle" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="15" font-weight="bold"><text x="105" y="13" dominant-baseline="central" fill="#010101" fill-opacity=".3">Custom header</text><text x="105" y="12" dominant-baseline="central">Custom header</text></g><rect y="25" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="120" y="36" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">zsh</text><text x="120" y="35" text-anchor="middle" dominant-baseline="central">zsh</text><text x="180" y="36" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">fish</text><text x="180" y="35" text-anchor="middle" dominant-baseline="central">fish</text></g><rect x="90" y="45" width="60" height="20" fill="#4c1"/><rect x="150" y="45" width="60" height="20" fill="#e05d44"/><rect y="45" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="85" y="56" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">FreeBSD</text><text x="85" y="55" text-anchor="end" dominant-baseline="central">FreeBSD</text><text x="120" y="56" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">1.1</text><text x="120" y="55" text-anchor="middle" dominant-baseline="central">1.1</text><text x="180" y="56" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">1.0</text><text x="180" y="55" text-anchor="middle" dominant-baseline="central">1.0</text></g><rect x="90" y="65" width="60" height="20" fill="#e05d44"/><rect y="65" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="85" y="76" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">freshcode.club</text><text x="85" y="75" text-anchor="end" dominant-baseline="central">freshcode.club</text><text x="120" y="76" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">1.0</text><text x="120" y="75" text-anchor="middle" dominant-baseline="central">1.0</text><text x="180" y="76" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">-</text><text x="180" y="75" text-anchor="middle" dominant-baseline="central">-</text></g><rect x="90" y="85" width="60" height="20" fill="#e05d44"/><rect y="85" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="85" y="96" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">Ubuntu 12</text><text x="85" y="95" text-anchor="end" dominant-baseline="central">Ubuntu 12</text><text x="120" y="96" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">0.9</text><text x="120" y="95" text-anchor="middle" dominant-baseline="central">0.9</text><text x="180" y="96" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">-</text><text x="180" y="95" text-anchor="middle" dominant-baseline="central">-</text></g><rect x="90" y="105" width="60" height="20" fill="#e05d44"/><rect y="105" width="100%" height="20" fill="url(#grad)"/><g fill="#fff" font-family="DejaVu Sans,Verdana,Geneva,sans-serif" font-size="11"><text x="85" y="116" text-anchor="end" dominant-baseline="central" fill="#010101" fill-opacity=".3">Ubuntu 24</text><text x="85" y="115" text-anchor="end" dominant-baseline="central">Ubuntu 24</text><text x="120" y="116" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">1.0</text><text x="120" y="115" text-anchor="middle" dominant-baseline="central">1.0</text><text x="180" y="116" text-anchor="middle" dominant-baseline="central" fill="#010101" fill-opacity=".3">-</text><text x="180" y="115" text-anchor="middle" dominant-baseline="central">-</text></g></g></svg>
